CHANGELOG

Version 1.5.0.7
 - Add Branch Address in Maintenance
 - Add Menus 1 Date Segrate List
 - Added Journal Entries Block if not close store and release Hot Code
 - Added Daily & Monthly Expiry List
 - Added Monitoring for OPT
 - Added Function for Deleting Wrong Item in Inventory
 - Added Log for Tampered Item Master, Invalid Hot Code of IMD & STO 
 - Added Separated OPT Generator
 - Added Icon
 - Added SMS Module for Expiry Items
 - Added TABLE SMS
 - Added Insurance in OR Layout
 - Added Separated OTP
 - Added Insurance in pawning
 - Added Branch Address Option in Settings
 - Added LayAway Module
 - Added Function if Full Paid Record to Inventory Sales
 - Added Layaway List Report (Active layaway)
 - Added Inventory Adjustment
 - Fix Pawn_List View Include Barangay in Patch
 - Fix Wrong Journal in Layaway Penalty
 - Fix Different Control # for STO, Inv, Return
 - Fix Adjustment Zero Inventory
 - Fix No Segre in Outstanding
 - Fix Segre List
 - Modify Pawn_List VIEW
 - Record Failed SMS Properly
 - Quick View on Pawnticket
 - Layaway Reports Sort by Date
 - Change Inventory Merchandise Sap Account
 - Can ReSend Failed Sending
 - fix SMS notification cannot view not enough specs

Version 1.4.1.15
 - Added Tables INV, INVLINES
 - Added Tables ITEMMASTER, DOC, DOCLINES
 - Added Journal in Insurance Close Store
 - Add InvoiceNum, STONum, SalesReturnNum and CustomerCode at TBLMAINTENACE
 - Add field SALESID and COSTID at TBLITEM
 - Add view STOCK_CARD
 - Add Reports - Inventory Report, Sales Report, Stockout Report
 - Add Tools - Sales Extractor
 - Add new privileges
 - Added Journal in Insurance Close Store
 - Add New Report Stock In and Montly Report For Sales Transaction
 - Update TBLCASH and TBLITEM
 - Can transact SALES, AUCTION REDEEM, IMD, STOCK IN/OUT (Item Pullout is not included here, use the Pullout Module)
 - Can Generate SAP Template Based STO for STOCK OUT
 - Can include void in Sales Transaction
 - Change DB Version 1.2.3.2